Case study page added, task creation in progress

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,23 +3,29 @@
         <!-- Logo -->
          <a class="logo" href="/">
         <!-- mini logo for sidebar mini 50x50 pixels -->
-         <span class="logo-mini"><b>ML</b></span> 
+         <span class="logo-mini"><b>ML</b></span>
         <!-- logo for regular state and mobile devices -->
          <span class="logo-lg"><b>MLaaS</b></span></a> <!-- Header Navbar -->
         <nav class="navbar navbar-static-top" role="navigation">
-            <!-- Sidebar toggle button-->
-            <a class="sidebar-toggle" data-toggle="offcanvas" href="#" role=
-            "button"><span class="sr-only">Toggle navigation</span></a> 
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+            </div>
+
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse pull-left" id=
             "navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Home <span class=
+                        <a href="#/home">Home <span class=
                         "sr-only">(current)</span></a>
                     </li>
                     <li>
-                        <a href="#">Analytics</a>
+                        <a href="#/analytics">Analytics</a>
+                    </li>
+                    <li>
+                        <a href="#/casestudy">Case Studies</a>
                     </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
