--- a/views/app.ejs
+++ b/views/app.ejs
@@ -34,6 +34,12 @@
         <script src="javascripts/home/homeController.js"></script>
         <script src="javascripts/home/homeService.js"></script>
 
+        <script src="javascripts/analytics/analyticsController.js"></script>
+        <script src="javascripts/analytics/analyticsService.js"></script>
+
+        <script src="javascripts/casestudy/caseStudyController.js"></script>
+        <script src="javascripts/casestudy/caseStudyService.js"></script>
+
         <script src="javascripts/header/headDirective.js"></script>
 
         <script src="javascripts/common/uploadDirective.js"></script>
@@ -52,6 +58,7 @@
         <link rel='stylesheet' href='/stylesheets/style.css' />
         <link rel='stylesheet' href='/stylesheets/problem.css'>
         <link rel='stylesheet' href='/stylesheets/sidebars.css' />
+        <link rel="stylesheet" href='stylesheets/casestudy.css' />
     </head>
     <body ng-app="myApp" class="hold-transition skin-blue sidebar-mini">
         <ui-view></ui-view>
