--- a/views/partials/casestudy.ejs
+++ b/views/partials/casestudy.ejs
@@ -4,72 +4,124 @@
     <div class="col-md-12 case-study-title" style="position: absolute; top: 15%">Drawbridge Cross Device Data Analytics</div>
 
     <div class="content-wrapper" style="margin-left: 0;">
-        <section class="content" style="padding: 0">
+        <section class="content">
             <div class="row">
                 <div class="col-md-12 drawbridge-banner">
                 </div>
             </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="box box-danger">
+                            <div class="box-header with-border">
+                                <h3 class="box-title">Device Statistics Chart</h3>
+                                <div class="box-tools pull-right">
+                                    <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                                </div>
+                            </div> <!-- box header -->
+                            <div class="box-body">
+
+                                <highchart id="chart1" config="caseStudyVm.getDeviceRawStatistics" class="span10"></highchart>
+
+                                <div>
+                                    <table class="table task-result">
+                                        <thead>
+                                        <th>Parameter</th>
+                                        <th>Values</th>
+                                        </thead>
+                                        <tbody ng-repeat="(key, value) in caseStudyVm.deviceNoPlotValues">
+                                        <tr>
+                                            <td><span>{{key}}</span></td>
+                                            <td><span>{{value}}</span></td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="box box-danger">
+                            <div class="box-header with-border">
+                                <h3 class="box-title">Cookies Statistics Chart</h3>
+                                <div class="box-tools pull-right">
+                                    <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                                </div>
+                            </div> <!-- box header -->
+                            <div class="box-body">
+
+                                <highchart id="chart2" config="caseStudyVm.getCookieRawStatistics" class="span10"></highchart>
+
+                                <div>
+                                    <table class="table task-result">
+                                        <thead>
+                                        <th>Parameter</th>
+                                        <th>Values</th>
+                                        </thead>
+                                        <tbody ng-repeat="(key, value) in caseStudyVm.cookieNoPlotValues">
+                                        <tr>
+                                            <td><span>{{key}}</span></td>
+                                            <td><span>{{value}}</span></td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </section>
-    </div>
 
-    <div class="row">
-        <div class="col-md-6">
-            <div class="box box-danger">
-                <div class="box-header with-border">
-                    <h3 class="box-title">Device Statistics Chart</h3>
-                    <div class="box-tools pull-right">
-                        <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                    </div>
-                </div> <!-- box header -->
-                <div class="box-body">
+        <section class="content">
+            <div class="row" style="text-align: center">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <button class="btn btn-default btn-block" style="display: block" ng-click="caseStudyVm.getMeanStatistics()">Explore more...</button>
+                </div>
+                <div class="col-md-3"></div>
+            </div>
 
-                    <highchart id="chart1" config="caseStudyVm.getDeviceRawStatistics" class="span10"></highchart>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="box box-primary boxMoreInfo">
+                        <div class="box-header with-border">
+                            <h3 class="box-title">Mean and Standard Deviation</h3>
+                            <div class="box-tools pull-right">
+                                <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                            </div>
+                        </div> <!-- box header -->
 
-                    <div>
-                        <table class="table task-result">
-                            <thead>
-                            <th>Parameter</th>
-                            <th>Values</th>
-                            </thead>
-                            <tbody ng-repeat="(key, value) in caseStudyVm.deviceNoPlotValues">
-                            <tr>
-                                <td><span>{{key}}</span></td>
-                                <td><span>{{value}}</span></td>
-                            </tr>
-                            </tbody>
-                        </table>
+                        <div class="box-body">
+
+                            <div class="row" >
+
+                                <div class="col-md-6" ng-repeat="data in caseStudyVm.meanStatistics">
+                                <div><h4>{{data.filename}}</h4></div>
+                                    <table class="table task-result" style="border: 1px solid #3c8dbc">
+                                        <thead>
+                                            <th>Parameter/Column</th>
+                                            <th>Anonymous_5</th>
+                                            <th>Anonymous_6</th>
+                                            <th>Anonymous_7</th>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td><h5>Mean</h5></td>
+                                                <td ng-repeat="m in data.mean"><span> {{m.value}} </span></td>
+                                            </tr>
+                                            <tr>
+                                                <td><h5>Standard deviation</h5></td>
+                                                <td ng-repeat="m in data.std"><span> {{m.value}} </span></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6">
-            <div class="box box-danger">
-                <div class="box-header with-border">
-                    <h3 class="box-title">Cookies Statistics Chart</h3>
-                    <div class="box-tools pull-right">
-                        <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                    </div>
-                </div> <!-- box header -->
-                <div class="box-body">
-
-                    <highchart id="chart2" config="caseStudyVm.getCookieRawStatistics" class="span10"></highchart>
-                    <div>
-                        <table class="table task-result">
-                            <thead>
-                            <th>Parameter</th>
-                            <th>Values</th>
-                            </thead>
-                            <tbody ng-repeat="(key, value) in caseStudyVm.cookieNoPlotValues">
-                            <tr>
-                                <td><span>{{key}}</span></td>
-                                <td><span>{{value}}</span></td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
+        </section>
     </div>
 
 
