--- a/views/app.ejs
+++ b/views/app.ejs
@@ -59,6 +59,7 @@
         <link rel='stylesheet' href='/stylesheets/problem.css'>
         <link rel='stylesheet' href='/stylesheets/sidebars.css' />
         <link rel="stylesheet" href='stylesheets/casestudy.css' />
+        <link rel="stylesheet" href="/stylesheets/ngtrans.css" />
     </head>
     <body ng-app="myApp" class="hold-transition skin-blue sidebar-mini">
         <ui-view></ui-view>
