Fixes to case study dashboard

--- a/views/partials/casestudy-section2.html
+++ b/views/partials/casestudy-section2.html
@@ -43,7 +43,7 @@
     <div class="row" style="text-align: center">
         <div class="col-md-3"></div>
         <div class="col-md-6">
-            <button class="btn btn-default btn-block" id="btnShowCharts" style="display: block" ng-click="caseStudyVm.getFmeasureRecallSpline()">Explore more...</button>
+            <button class="btn btn-default btn-block" id="btnShowCharts" style="display: block" ng-click="caseStudyVm.loadPrecisionCharts()">Explore more...</button>
         </div>
         <div class="col-md-3"></div>
     </div>
