--- a/views/partials/casestudy-section3.html
+++ b/views/partials/casestudy-section3.html
@@ -44,4 +44,16 @@
         </div>
     </div>
 
+    <div class="row slide">
+        <div class="col-md-12">
+            <div class="box">
+                <div class="box-header with-border"></div> <!-- box header -->
+                <div class="box-body">
+                    <highchart id="chart4" config = "caseStudyVm.lineChart" class="span10"></highchart>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </section>
